Fixed resolution on mobile devices

--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -57,7 +57,7 @@ img{
     /* width: 100%; */
     height: auto;
     max-width: 100%;
-    /* float: center; */
+    float: center; 
 }
 
 
